feat: add csv util

--- a/composer.json
+++ b/composer.json
@@ -3,13 +3,14 @@
     "description": "SI6 package base.",
     "require": {
         "php": "^7.2",
-        "fideloper/proxy": "^4.0",
-        "laravel/framework": "^6.0",
-        "laravel/tinker": "^1.0",
-        "guzzlehttp/guzzle": "^6.3",
+        "aws/aws-sdk-php": "^3.112",
         "bensampo/laravel-enum": "^1.26",
         "elasticsearch/elasticsearch": "^7.2",
-        "aws/aws-sdk-php": "^3.112",
+        "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "^6.3",
+        "laravel/framework": "^6.0",
+        "laravel/tinker": "^1.0",
+        "league/csv": "^9.0",
         "league/flysystem-aws-s3-v3": "^1.0"
     },
     "config": {
