feat: add doctrine dbal

--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.2",
         "aws/aws-sdk-php": "^3.112",
         "bensampo/laravel-enum": "^1.26",
+        "doctrine/dbal": "^2.10",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "league/csv": "^9.6",
